tests/enums_with_unknown_members/enums_with_unknown_members.exp
Error ------------------------------------------------------------------------------------- not-fully-exhaustive.js:21:9

Incomplete exhaustive check: the members `C` and `B` of enum `U` [1] have not been considered in check of `u`. The
default case [2] does not check for the missing members as the `require-explicit-enum-switch-cases` lint has been
enabled. [require-explicit-enum-switch-cases]

   not-fully-exhaustive.js:21:9
   21| switch (u) { // Error
               ^

References:
   not-fully-exhaustive.js:10:16
   10| declare var u: U;
                      ^ [1]
   not-fully-exhaustive.js:23:3
   23|   default: break;
         ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ unknown-members.js:30:9

Incomplete exhaustive check: the member `B` of enum `E` [1] has not been considered in check of `x`.
[invalid-exhaustive-check]

   unknown-members.js:30:9
   30| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]


Error ------------------------------------------------------------------------------------------ unknown-members.js:35:9

Missing `default` case in the check of `x`. `E` [1] has unknown members (specified using `...`) so checking it requires
the use of a `default` case to cover those members. [invalid-exhaustive-check]

   unknown-members.js:35:9
   35| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]


Error ------------------------------------------------------------------------------------------ unknown-members.js:38:8

Invalid exhaustive check: case checks for enum member `A` of `E` [1], but member `A` was already checked at case [2].
[invalid-exhaustive-check]

   unknown-members.js:38:8
   38|   case E.A: break; // Error
              ^^^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]
   unknown-members.js:36:8
   36|   case E.A: break;
              ^^^ [2]


Error ------------------------------------------------------------------------------------------ unknown-members.js:42:9

Missing `default` case in the check of `x`. `E` [1] has unknown members (specified using `...`) so checking it requires
the use of a `default` case to cover those members. [invalid-exhaustive-check]

   unknown-members.js:42:9
   42| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]



Found 5 errors
